Release history for HTTP-Tiny-Mech

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - develop: ↑1

1.000000 2014-05-10T02:41:46Z
 [00 Minor]
 - Mostly a packaging changes, not interesting code changes, but downstream vendors who package by hand may need to pay
   attention.

 [01 Tooling]
 - Now uses ExtUtils::MakeMaker instead of Module::Build
 - Now defaults to Minimum requirements and "latest" are only recommended ( Previously it required very recent versions
   of toolchain things needlessly )

 [02 Version Scheme]
 - Moved from x.y.z to x.yyyzzz
 - This is the primary reason for the 1.x on the box.

 [Dependencies::Aggregate]
 - 5.008009 : 64 → 61
 - 5.010001 : 48 → 45
 - 5.018002 : ? → 25
 - 5.019000 : 29 → ?
 - 5.019009 : ? → 28

 [Dependencies::Stats]
 - Dependencies changed since 0.2.1, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +7 ↑1 -9
 - test: +4 ↓1 (recommends: +4)

0.2.1 2013-11-24T00:55:35Z
 [Dependencies::Noteworthy]
 - Needs HTTP::Tiny 0.022 for tests.

 [Dependencies::Stats]
 - Dependencies changed since 0.2.0, see misc/*.deps* for details
 - runtime: ↑1
 - test: +1

0.2.0 2013-11-24T00:18:47Z
 [00 Major]
 - Internals refactored in terms of Class::Tiny, removing the need for Moose to do basically nothing.

 [Dependencies::Noteworthy]
 - use Class::Tiny
 - no longer uses Moose and MooseX::NonMoose

 [Dependencies::Stats]
 - Dependencies changed since 0.1.4, see misc/*.deps* for details
 - develop: ↑1
 - runtime: +2 -2

 [Documentation]
 - Changes retroactively tided.

 [Tests]
 - Basic constructor tests added.

0.1.4 2013-11-21T07:32:56Z
 [00 Maint release]

 [Dependencies::Noteworthy]
 - use Module::Build 0.4202
 - use Test::More 1.001002

 [Dependencies::Stats]
 - Dependencies changed since 0.1.3, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +45 -1 (recommends: -1, suggests: +1 -1)
 - test: ↑1 -2

 [Documentation]