@@ -8,21 +8,31 @@ package HTTP::Tiny::Mech;
 
 # AUTHORITY
 
-use Class::Tiny {
-  mechua => sub {
-    require WWW::Mechanize;
-    return WWW::Mechanize->new();
-  },
-};
-
-# This is intentionally after Class::Tiny
-# so that inheritance is
-#
-# HTTP::Tiny::Mech -> [ Class::Tiny::Object , HTTP::Tiny ]
-#
-# So that mechua is parsed by Class::Tiny::Object
-#
 use parent 'HTTP::Tiny';
+
+sub new {
+  my ( $self, %args ) = @_;
+  my ( $mechua, $has_mechua );
+  if ( exists $args{mechua} ) {
+    $has_mechua = 1;
+    $mechua     = delete $args{mechua};
+  }
+  my $instance = $self->SUPER::new(%args);
+  if ($has_mechua) {
+    $instance->{mechua} = $mechua;
+  }
+  return bless $instance, $self;
+}
+
+sub mechua {
+  my ( $self, $new_mechua, $has_new_mechua ) = ( $_[0], $_[1], @_ > 1 );
+  if ($has_new_mechua) {
+    $self->{mechua} = $new_mechua;
+  }
+  return $self->{mechua} if exists $self->{mechua};
+  require WWW::Mechanize;
+  return ( $self->{mechua} = WWW::Mechanize->new() );
+}
 
 =head1 SYNOPSIS
 
