@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.000001
+ [Removed / runtime requires]
+ - Class::Tiny
 
 1.000000 2014-05-10T02:41:46Z
  [Added / configure requires]
