@@ -1,9 +1,13 @@
 Release history for HTTP-Tiny-Mech
 
 {{$NEXT}}
+ [00 Major]
+ - Recoded construction to work without Class::Tiny, as the logic is much more difficult since 1.000
+
  [Dependencies::Stats]
  - Dependencies changed since 1.000000, see misc/*.deps* for details
  - develop: ↑1
+ - runtime: -1
 
 1.000000 2014-05-10T02:41:46Z
  [00 Minor]
